Changes to be committed: 	modified:   app/Http/Controllers/api/AuthController.php 	modified:   app/Http/Controllers/api/PropertyController.php 	modified:   app/Models/LeaseAgreements.php 	modified:   public/api.yml
